--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -21,7 +21,7 @@ jobs:
           base: header, repositories
           plugin_lines: yes
           output_action: commit
-          committer_branch: output
+          committer_branch: metrics
           config_timezone: Europe/Madrid
 
       - uses: lowlighter/metrics@latest
@@ -33,5 +33,5 @@ jobs:
           plugin_languages: yes
           plugin_languages_limit: 8
           output_action: commit
-          committer_branch: output
+          committer_branch: metrics
           config_timezone: Europe/Madrid
