--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -17,7 +17,7 @@ jobs:
         name: General Stats
         with:
           filename: github-metrics.svg
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.METRICS_TOKEN }}
           base: header, repositories
           plugin_lines: yes
           output_action: commit
@@ -28,7 +28,7 @@ jobs:
         name: Top Languages
         with:
           filename: github-metrics-langs.svg
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           plugin_languages: yes
           plugin_languages_limit: 8
