--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           filename: github-metrics.svg
           token: ${{ secrets.METRICS_TOKEN }}
+          user: TiiZss
           base: header, repositories
           plugin_lines: yes
           output_action: commit
