--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -37,7 +37,6 @@ jobs:
       - name: push github-contribution-grid-snake.svg to the output branch
         uses: peaceiris/actions-gh-pages@v3
         with:
+          github_token: ${{ secrets.METRICS_TOKEN }}
           publish_branch: output
           publish_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
